test/tools/panc/TStateTypeasCapsule.out
TStateTypeasCapsule.java:32:9: compiler.err.states.with.capsule.type.error
1 error